# nova26

./: .env.local.example  .gitignore  .novaignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CLI.md  CONTRIBUTING.md  COORDINATION.md  FEATURES_GUIDE.md  FINAL_OVERNIGHT_REPORT.md  INTEGRATIONS.md  MINIMAX.md  MISSING_FEATURES.md  NEW_FEATURES_SUMMARY.md  ORCHESTRATOR.md  OVERNIGHT_SUMMARY.md  PRDS.md  PRE_SPRINT_ANALYSIS.md  PROJECT_REFERENCE.md  R17_API_DOCUMENTATION.md  R17_QUICK_REFERENCE.md  README.md  SCHEMA.md  convex.json  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.cli.json  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts
.claude/: mcp.json  session-report-2026-02-21.md
.kiro/: KIRO_INITIAL_PROMPT.md
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  images-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
.nova/: 24HR-BATTLE-PLAN.md  AGENT-ROSTER-FINAL.md  AI_COORDINATION.md  BROWSER-SERIES-01.md  BROWSER-SERIES-02.md  BROWSER-SERIES-03.md  BROWSER-SERIES-04.md  BROWSER-SERIES-05.md  BROWSER-SERIES-06.md  BROWSER-SERIES-07.md  BROWSER-SERIES-08.md  BROWSER-SERIES-09.md  BROWSER-SERIES-10.md  CAPABILITIES-PROBE.md  CAPABILITY-PROBE.md  CORRECTIVE-PROMPT-KIMI.md  CORRECTIVE-PROMPT-SONNET.md  (+35 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  electric_sync.rs  main.rs  ollama_manager.rs
(+1638 files in other folders)
